@@ -13,6 +13,7 @@
 - Save printed games to their own folder
 - Save a copy of the puzzle when using "Print Current Puzzle"
 - Add mnemonics to print multiple dialog and game completed dialog
+- Add current highscore to clock box tooltip
 - In game completed dialog:
   Add "Change Difficulty" button
   Shorten the winning string to "Puzzle Completed!" in most cases
